apps/thelounge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thelounge
  namespace: default
spec:
  selector:
    app: thelounge
  ports:
    - port: 9000
      targetPort: 9000
