apps/thelounge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thelounge
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: irc.auch.cool
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thelounge
                port:
                  number: 9000
  tls:
    - hosts:
        - irc.auch.cool
      secretName: thelounge-tls
